--- a/templates/style.css
+++ b/templates/style.css
@@ -25,14 +25,21 @@ body {
 	color: #ffffff;
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
+    padding: 0.5rem;
 }
 .brand a {
-    color: #ffffff;
-    font-size: 2.5rem;
-    font-weight: bold;
+	color: #ffffff;
+	font-size: 2.5rem;
+	font-weight: bold;
+	text-decoration: none;
 }
 .header-links a {
-    color: #ffffff;
+	color: #ffffff;
+	text-decoration: none;
+}
+.header-links a:hover {
+	color: #ff8000;
 }
 .main {
 	grid-area: main;
@@ -41,4 +48,7 @@ body {
 	grid-area: footer;
 	background-color: #203040;
 	color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
